[project]
name = "whop-pulse-backend"
version = "0.1.0"
description = "Barebones FastAPI app plus a Playwright WebSocket hook for whop.com/pulse"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Whop", email = "dev@whop.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.44.0",
    "protobuf==3.20.*",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
