[project]
name = "whop-pulse-tools"
version = "0.2.0"
description = "Playwright utilities for whop.com Pulse plus a listing scraper"
requires-python = ">=3.11"
readme = "README.md"
authors = [{ name = "Whop", email = "dev@whop.com" }]
dependencies = [
    "playwright>=1.44.0",
    "httpx>=0.27.0",
    "blackboxprotobuf>=1.0.1",
    "setuptools<81",
    "motor>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.0",
]

[tool.uv]
index-url = "https://pypi.org/simple"
